--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inria+Serif:wght@700&family=Space+Mono:wght@400;700&display=swap');
 :root {
 
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins','Inria Serif', sans-serif;
 }
 @tailwind base;
 @tailwind components;
